--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "init-db": "node scripts/init-db.js",
     "seed": "node scripts/seed.js"
   },
-  "keywords": ["email", "checker", "management", "sqlite", "nodejs"],
+  "keywords": [
+    "email",
+    "checker",
+    "management",
+    "sqlite",
+    "nodejs"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "sqlite3": "^5.1.6",
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express-rate-limit": "^6.7.0"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-session": "^1.18.2",
+    "sqlite3": "^5.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
