--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
     "sqlite3": "^5.1.6",
     "xlsx": "^0.18.5"
   },
